--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -4,7 +4,6 @@
 <div class = "container">
 <div class="row">
   <% @images.each do |image| %>
-
       <div class="col-md-4 portfolio-item">
             <%= link_to image_tag(image.image_url(:display)), image%>
           </a>
@@ -12,14 +11,15 @@
             <%=link_to image.title, image%></a>
           </h3>
           <p>Description</p>
-          <%- if current_user.id == image.user_id-%>
-          <td><%= button_to 'Edit', edit_image_path(image), class: :'btn btn-default', method: :get %></td>
-          <td><%= button_to 'Destroy', image, class: :'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <%-end-%>
+          <% if user_signed_in? %>
+            <% if (current_user.id) == (image.user_id) or current_user.admin?%>
+            <td id = "edit"><%= button_to 'Edit', edit_image_path(image), class: :'btn btn-default', method: :get %></td>
+            <td id = "delete"><%= button_to 'Destroy', image, class: :'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <%else%>
+            <%end%>
+          <%end%>
       </div>
-
-  <% end %>
+      <%end%>
   </div>
-
 <%= link_to 'Back', images_path%>
 </div>
