--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -16,28 +16,30 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <li class = "navbar-text navbar-left"> School of Anthropology </li>
         <li class="active"><%= link_to 'Home', root_path, method: :get %> <span class="sr-only">(current)</span></a></li>
+        <li id = "gallery"><%= link_to 'Gallery', images_path, data: { no_turbolink: true }%></li>
+        <li id = "contest"><%= link_to 'Photo Contestants!', photo_contest_path%></li>
+        <li id = "past"><%= link_to 'Past Winners', awards_path %></li>
+
         <% if user_signed_in? %>
-          <li><%= link_to 'Gallery', images_path%></li>
-          <li><%= link_to 'New Image', new_image_path %></li>
-          <li><%= link_to 'Photo Contestants!', photo_contest_path%></li>
-          <li><%= link_to 'Past Winners', awards_path %></li>
+          <li id = "new"><%= link_to 'New Image', new_image_path %></li>
+          <%if current_user.admin? %>
+            <li id = "approve"><%= link_to 'Approve Photos', approve_path %></li>
+          <%end%>
         <% else %>
-          <li><%= link_to 'Gallery', images_path%></li>
-          <li><%= link_to 'Photo Contestants!', photo_contest_path%></li>
-          <li><%= link_to 'Past Winners', awards_path %></li>
         <% end %>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <%if user_signed_in? %>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Signed in as: <%= current_user.email%> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Signed in as: <%= current_user.email%><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%=link_to 'Profile', profile_path(current_user.id)%></li>
             <li><%=link_to 'Logout', destroy_user_session_path, method: :delete%></li>
