--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,16 +1,40 @@
-<p id="notice"><%= notice %></p>
 <!DOCTYPE html>
 
 <!-- first section - Home -->
-<div id="home" class="home">
-<div class="text-vcenter">
-  <h1>Anthropology Gallery</h1>
-  <h3>This is bootstrap-based layout</h3>
-  <br>
-  <br>
-  <a id = "arrow" href = "#about"><i class="fa fa-chevron-circle-down fa-5x"></i></a>
-</div>
-</div>
+<header id="myCarousel" class="carousel slide">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for Slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <!-- Set the first background image using inline CSS below. -->
+                <div class="fill" style="background-image:url(<%= @images.find(13).image_url%>);"></div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <div class="fill" style="background-image:url(<%= @images.find(19).image_url%>);"></div>
+                </div>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url(<%= @images.find(15).image_url%>);"></div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="icon-next"></span>
+        </a>
+
+    </header>
+
+
 <!-- /first section -->
 
 
@@ -27,7 +51,7 @@
 
 
 <!-- fourth section - Information -->
-<div id="information" class="pad-section">
+<div id="information" class="pad-section" style="background-image:url(<%= @images.find(19).image_url%>);">
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
@@ -53,4 +77,4 @@
     </div>
   </div>
 </div>
-<!-- /fourth section -->
+</html>
