Added some static images

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -12,15 +12,15 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url(<%= @images.find(13).image_url%>);"></div>
+                <div class="fill" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);"></div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url(<%= @images.find(19).image_url%>);"></div>
+                <div class="fill" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);"></div>
                 </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url(<%= @images.find(15).image_url%>);"></div>
+                <div class="fill" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);"></div>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
 
 
 <!-- fourth section - Information -->
-<div id="information" class="pad-section" style="background-image:url(<%= @images.find(19).image_url%>);">
+<div id="information" class="pad-section" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);">
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
