Integrated Cloudinary and modified some views

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -21,8 +21,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :contestant %><br>
     <%= f.check_box :contestant %>
+    <%= f.label :contestant %>
   </div>
 
   <div class="actions">
