--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,11 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.navbar-brand {
-  padding: 6px 10px !important;
-}
-
-
 a {
   &:link {
     color: green;
@@ -25,7 +20,6 @@ a {
 html, body {
   height: 100%;
   width: 100%;
-  //padding-top: 1.5em;
 }
 
 /* padded section */
@@ -68,7 +62,7 @@ html, body {
 .fill {
     width: 100%;
     height: 100%;
-    background-position: center;
+    // background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
