--- a/app/views/approval/approve.html.erb
+++ b/app/views/approval/approve.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<div class = 'container'>
 <div class = "page-header">
-<center><h1>Approve Images</h1>
+<center><h1>Approve Images</h1></center>
+<hr>
 </div>
 <div class = "container">
 <div class="row">
@@ -23,4 +24,5 @@
 
   <% end %>
   </div>
+</div>
 </div>
