--- a/app/views/awards/awards.html.erb
+++ b/app/views/awards/awards.html.erb
@@ -1,2 +1,5 @@
-<h1>Awards#awards</h1>
-<p>Find me in app/views/awards/awards.html.erb</p>
+<div class = 'container'>
+<center><h1>Previous Winners</h1></center>
+<hr>
+<p>To be updated...</p>
+</div>
