--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<div class = 'container'>
 <div class = "page-header">
 <center><h1>Gallery</h1>
+<hr>
 </div>
 <div class = "container">
 <div class="row">
@@ -21,4 +22,5 @@
 
   <% end %>
   </div>
+</div>
 </div>
