--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Image</h1>
+<div class = 'container'>
+  <h1>New Image</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', images_path %>
+</div>
