--- a/app/views/photo_contest/contestants.html.erb
+++ b/app/views/photo_contest/contestants.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<div class = 'container'>
 <div class = "page-header">
-<center><h1>Photo Contestants</h1>
+<center><h1>Photo Contestants</h1></center>
+<hr>
 </div>
 
 <div class = "container">
@@ -19,4 +20,5 @@
 
   <% end %>
   </div>
+</div>
 </div>
