--- a/app/views/shared/_navigationbartest.html.erb
+++ b/app/views/shared/_navigationbartest.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,27 +8,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="navbar-brand">
-        <%= image_tag("logo.png", size: "39x40")%>
-      </div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class = "navbar-text navbar-left"> School of Anthropology </li>
-        <li class="active"><%= link_to 'Home', root_path, method: :get %> <span class="sr-only">(current)</span></a></li>
+        <li id = 'home'><%= link_to 'Home', root_path%></li>
         <li id = "gallery"><%= link_to 'Gallery', images_path, data: { no_turbolink: true }%></li>
         <li id = "contest"><%= link_to 'Photo Contestants!', photo_contest_path%></li>
         <li id = "past"><%= link_to 'Past Winners', awards_path %></li>
 
-        <% if user_signed_in? %>
-          <li id = "new"><%= link_to 'New Image', new_image_path %></li>
-          <%if current_user.admin? %>
-            <li id = "approve"><%= link_to 'Approve Photos', approve_path %></li>
-          <%end%>
-        <% else %>
-        <% end %>
+
       </ul>
       <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -39,9 +29,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <%if user_signed_in? %>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Signed in as: <%= current_user.email%><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email%><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%=link_to 'Profile', profile_path(current_user.id)%></li>
+              <li id = "new"><%= link_to 'New Image', new_image_path %></li>
+              <%if current_user.admin? %>
+                <li id = "approve"><%= link_to 'Approve Photos', approve_path %></li>
+              <% end %>
             <li><%=link_to 'Logout', destroy_user_session_path, method: :delete%></li>
           <% else %>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Hello, Guest! <span class="caret"></span></a>
