--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -12,15 +12,15 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);"></div>
+                <div class="fill" style="background-image:url(<%= asset_path 'Image3.JPG'%>);"></div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);"></div>
+                <div class="fill" style="background-image:url(<%= asset_path '2015-02-09_13.51.29.jpg'%>);"></div>
                 </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url(http://www.hedweb.com/animimag/parrot.jpg);"></div>
+                <div class="fill" style="background-image:url(<%= asset_path '2009-008-02.jpg'%>);"></div>
             </div>
         </div>
 
